--- a/src/main/resources/io/github/wuerzburgtransportguide/hello-view.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/hello-view.fxml
@@ -12,5 +12,5 @@
     </padding>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Button text="Hellooooooo!" onAction="#onHelloButtonClick"/>
 </VBox>
