--- a/src/main/resources/io/github/wuerzburgtransportguide/hello-view.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/hello-view.fxml
@@ -4,11 +4,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.wuerzburgtransportguide.HelloController">
+<VBox id="background" alignment="TOP_CENTER" prefHeight="800.0" prefWidth="1000.0" spacing="20.0" stylesheets="@styles/main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.wuerzburgtransportguide.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-
-    <Label fx:id="welcomeText" />
-    <Button onAction="#onHelloButtonClick" stylesheets="@styles/main.css" text="Hellooooooo!" />
+   <children>
+      <Pane layoutX="30.0" layoutY="97.0" prefHeight="114.0" prefWidth="911.0" />
+      <Label id="header" text="WuerzburgTransportGuide" textAlignment="CENTER" textFill="#2766cd" />
+      <Pane prefHeight="251.0" prefWidth="938.0" />
+      <Button id="startButton" alignment="CENTER" mnemonicParsing="false" text="Start" textAlignment="CENTER" />
+   </children>
 </VBox>
