--- a/src/main/resources/io/github/wuerzburgtransportguide/styles/main.css
+++ b/src/main/resources/io/github/wuerzburgtransportguide/styles/main.css
@@ -1,6 +1,18 @@
-.button
+#background
 {
-    -fx-font: 16px "Serif";
-    -fx-padding: 100;
-    -fx-background-color: #CCFF99;
+ -fx-background-image: url("../images/startpage.png");
+ -fx-background-size: 1000.0 800.0;
+}
+#startButton
+{
+    -fx-color: #000000;
+    -fx-background-color: rgb(50,50,50, 0.8);
+    -fx-font-size: 80px;
+    -fx-border-radius: 10;
+    -fx-background-radius: 10;
+}
+#header
+{
+    -fx-font-size: 32px;
+    -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
