--- a/src/main/resources/io/github/wuerzburgtransportguide/styles/main.css
+++ b/src/main/resources/io/github/wuerzburgtransportguide/styles/main.css
@@ -14,5 +14,6 @@
 #header
 {
     -fx-font-size: 32px;
+    -fx-underline: true;
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
