--- a/src/main/resources/io/github/wuerzburgtransportguide/hello-view.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/hello-view.fxml
@@ -5,12 +5,22 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="io.github.wuerzburgtransportguide.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<VBox
+	alignment="CENTER"
+	spacing="20.0"
+	xmlns:fx="http://javafx.com/fxml"
+	fx:controller="io.github.wuerzburgtransportguide.HelloController"
+>
+	<padding>
+		<Insets
+			bottom="20.0"
+			left="20.0"
+			right="20.0"
+			top="20.0" />
+	</padding>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hellooooooo!" onAction="#onHelloButtonClick"/>
+	<Label fx:id="welcomeText" />
+	<Button
+		text="Hellooooooo!"
+		onAction="#onHelloButtonClick" />
 </VBox>
