--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.fxml
@@ -27,6 +27,7 @@
 				<ListView prefHeight="200.0" prefWidth="200.0" styleClass="fenster" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 				<TextField id="ziel" styleClass="fenster" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
 				<TextField id="start" styleClass="fenster" GridPane.hgrow="ALWAYS" />
+				<DatePicker id="date" GridPane.rowIndex="2" styleClass="fenster" GridPane.hgrow="ALWAYS" prefHeight="100" prefWidth="500" />
 			</children>
 		</GridPane>
 	</children>
