Scene updated, Gui update

--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.css
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.css
@@ -6,3 +6,11 @@
 #date {
 	-fx-control-inner-background: #4E5357;
 }
+
+#searchButton {
+	-fx-control-inner-background: #4E5357;
+	-fx-background-color: #4E5357;
+	-fx-background-radius: 10;
+	-fx-text-fill: white;
+	-fx-font-size: 25px;
+}
