--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/start/start.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/start/start.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 
 <VBox id="background" alignment="TOP_CENTER" prefHeight="800.0" prefWidth="1000.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
-	xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.wuerzburgtransportguide.Controller"
+	xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.wuerzburgtransportguide.SwitchSceneController"
 >
 	<padding>
 		<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -21,8 +21,9 @@
 		</rowConstraints>
 		<children>
 			<Label id="header" text="WuerzburgTransportGuide" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-			<Button id="startButton" alignment="CENTER" maxHeight="80.0" maxWidth="150.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0"
-				text="Start" textAlignment="CENTER" textOverrun="CLIP" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+			<Button fx:id="startButton" onAction="#switchSceneToRoute" id="startButton" alignment="CENTER" maxHeight="80.0" maxWidth="150.0" minHeight="20.0" minWidth="20.0"
+				mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="Start" textAlignment="CENTER" textOverrun="CLIP" GridPane.halignment="CENTER" GridPane.rowIndex="1"
+				GridPane.valignment="CENTER" />
 		</children>
 	</GridPane>
 	<stylesheets>
