--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 
 <VBox id="background" alignment="TOP_CENTER" prefHeight="800.0" prefWidth="1000.0" spacing="20.0" styleClass="background" xmlns="http://javafx.com/javafx/17.0.2-ea"
-	xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.wuerzburgtransportguide.Controller"
+	xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.wuerzburgtransportguide.SwitchSceneController"
 >
 	<padding>
 		<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -14,8 +14,8 @@
 	<children>
 		<GridPane alignment="CENTER" hgap="15.0" vgap="15.0" VBox.vgrow="ALWAYS">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="400.0" />
+				<ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="400.0" />
 			</columnConstraints>
 			<rowConstraints>
 				<RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="512.0" vgrow="ALWAYS" />
@@ -27,9 +27,10 @@
 				<ListView prefHeight="200.0" prefWidth="200.0" styleClass="fenster" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 				<TextField id="ziel" styleClass="fenster" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
 				<TextField id="start" styleClass="fenster" GridPane.hgrow="ALWAYS" />
-				<DatePicker id="date" GridPane.rowIndex="2" styleClass="fenster" GridPane.hgrow="ALWAYS" prefHeight="100" prefWidth="500" />
+				<Button id="searchButton" prefHeight="100" prefWidth="400" text="Suchen" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
 			</children>
 		</GridPane>
+
 	</children>
 	<stylesheets>
 		<URL value="@../../styles/global.css" />
