--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/map/map.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/map/map.fxml
@@ -2,14 +2,27 @@
 
 <?import java.net.*?>
 <?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox id="background" fx:id="main" alignment="TOP_CENTER" prefHeight="800.0" prefWidth="1000.0" spacing="20.0" styleClass="background"
+<VBox id="background" fx:id="mapContainer" alignment="TOP_CENTER" prefHeight="800.0" prefWidth="1000.0" spacing="20.0" styleClass="background"
 	xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.wuerzburgtransportguide.view.MapController"
 >
 	<padding>
-		<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+		<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
 	</padding>
+	<children>
+		<HBox alignment="CENTER_RIGHT" VBox.vgrow="NEVER">
+			<children>
+				<VBox alignment="CENTER_LEFT" HBox.hgrow="NEVER" styleClass="attribution">
+					<children>
+						<Hyperlink onAction="#visitOpenStreetMap" text="Map data from OpenStreetMap" />
+						<Hyperlink onAction="#visitVVM" text="Public Transport data from VVM" />
+					</children>
+				</VBox>
+			</children>
+		</HBox>
+	</children>
 	<stylesheets>
 		<URL value="@../../styles/global.css" />
 		<URL value="@map.css" />
