refactor controller classes, update fxml files and implement basic search

--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.css
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.css
@@ -3,8 +3,14 @@
 	-fx-text-fill: white;
 }
 
-#date {
+.lists {
 	-fx-control-inner-background: #4E5357;
+	-fx-text-fill: white;
+}
+
+.lists>* {
+	-fx-control-inner-background: #4E5357;
+	-fx-background-color: black;
 }
 
 #searchButton {
