--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/start/start.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/start/start.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 
 <VBox id="background" alignment="TOP_CENTER" prefHeight="800.0" prefWidth="1000.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
-	xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.wuerzburgtransportguide.SwitchSceneController"
+	xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.wuerzburgtransportguide.view.start.StartController"
 >
 	<padding>
 		<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
