--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/route/availableRoutes/availableRoutes.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/route/availableRoutes/availableRoutes.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 
 <VBox id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="20"
-	styleClass="background" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
+	styleClass="background" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.wuerzburgtransportguide.view.route.availableRoutes.AvailableRoutesController"
 >
 	<padding>
 		<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -22,9 +22,7 @@
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
-
 			<children>
-
 				<GridPane hgap="5.0" styleClass="backgroundBoxes" GridPane.rowIndex="0">
 					<padding>
 						<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -45,7 +43,6 @@
 						<TextField editable="false" styleClass="arrivalTime" GridPane.columnIndex="3" />
 					</children>
 				</GridPane>
-
 				<GridPane hgap="5.0" styleClass="backgroundBoxes" GridPane.rowIndex="1">
 					<padding>
 						<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -70,7 +67,6 @@
 						<TextField editable="false" styleClass="arrivalTime" GridPane.columnIndex="3" />
 					</children>
 				</GridPane>
-
 				<GridPane hgap="5.0" styleClass="backgroundBoxes" GridPane.rowIndex="2">
 					<padding>
 						<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -93,7 +89,6 @@
 						<TextField editable="false" styleClass="transfer" GridPane.columnIndex="4" />
 					</children>
 				</GridPane>
-
 				<GridPane hgap="5.0" styleClass="backgroundBoxes" GridPane.rowIndex="3">
 					<padding>
 						<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -114,10 +109,7 @@
 						<TextField editable="false" styleClass="arrivalTime" GridPane.columnIndex="3" />
 					</children>
 				</GridPane>
-
 			</children>
-
-
 		</GridPane>
 	</children>
 	<stylesheets>
