--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.fxml
@@ -25,7 +25,7 @@
 			<children>
 				<ListView fx:id="startList" prefHeight="200.0" prefWidth="200.0" styleClass="fenster, lists" GridPane.rowIndex="1" />
 				<ListView fx:id="destinationList" prefHeight="200.0" prefWidth="200.0" styleClass="fenster, lists" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-				<TextField id="ziel" fx:id="destination" promptText="Ziel" styleClass="fenster" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
+				<TextField id="ziel" fx:id="destination" promptText="Destination" styleClass="fenster" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
 				<TextField id="start" fx:id="start" promptText="Start" styleClass="fenster" GridPane.hgrow="ALWAYS" />
 				<Button fx:id="searchButton" id="searchButton" onAction="#showAvailableRoutes" prefHeight="100" prefWidth="400" text="Suchen" GridPane.columnSpan="2"
 					GridPane.halignment="CENTER" GridPane.rowIndex="2" />
