Update StopPointCache with clear method and add clear cache button on route view

--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.css
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.css
@@ -13,10 +13,18 @@
 	-fx-background-color: black;
 }
 
-#searchButton {
+#button {
 	-fx-control-inner-background: #4E5357;
 	-fx-background-color: #4E5357;
 	-fx-background-radius: 10;
 	-fx-text-fill: white;
 	-fx-font-size: 25px;
+}
+
+#buttonSecondary {
+	-fx-control-inner-background: #4E5357;
+	-fx-background-color: #4E5357;
+	-fx-background-radius: 5;
+	-fx-text-fill: white;
+	-fx-font-size: 15px;
 }
