--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.css
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/route/route.css
@@ -8,6 +8,17 @@
 	-fx-text-fill: white;
 }
 
+.list-cell:filled:selected:focused, .lists:filled:selected, .lists:even,
+	.lists:odd {
+	-fx-background-color: #4E5357;
+	-fx-text-fill: white;
+}
+
+.lists:filled:selected:focused, .lists:filled:selected, .lists:even,
+	.lists:odd {
+	-fx-background-color: transparent;
+}
+
 .lists>* {
 	-fx-control-inner-background: #4E5357;
 	-fx-background-color: black;
