--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/map/map.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/map/map.fxml
@@ -11,21 +11,47 @@
 	<padding>
 		<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
 	</padding>
-	<children>
-		<Pane VBox.vgrow="NEVER">
-			<children>
-				<HBox alignment="CENTER_LEFT" fillHeight="false">
-					<children>
-						<Hyperlink onAction="#visitOpenStreetMap" text="Map data from OpenStreetMap" />
-						<Hyperlink onAction="#visitVVM" text="Public Transport data from VVM" />
-					</children>
-				</HBox>
-			</children>
-		</Pane>
-
-	</children>
 	<stylesheets>
 		<URL value="@../../styles/global.css" />
 		<URL value="@map.css" />
 	</stylesheets>
+	<children>
+		<GridPane VBox.vgrow="ALWAYS">
+			<columnConstraints>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+			</rowConstraints>
+			<children>
+				<GridPane GridPane.rowIndex="0">
+					<columnConstraints>
+						<ColumnConstraints fillWidth="true" hgrow="SOMETIMES" minWidth="10.0" />
+						<ColumnConstraints fillWidth="true" hgrow="SOMETIMES" minWidth="10.0" />
+						<ColumnConstraints fillWidth="true" hgrow="SOMETIMES" minWidth="10.0" />
+						<ColumnConstraints fillWidth="true" hgrow="SOMETIMES" minWidth="10.0" />
+						<ColumnConstraints fillWidth="true" hgrow="SOMETIMES" minWidth="10.0" />
+						<ColumnConstraints fillWidth="true" hgrow="SOMETIMES" minWidth="10.0" />
+						<ColumnConstraints fillWidth="true" hgrow="SOMETIMES" minWidth="10.0" />
+						<ColumnConstraints fillWidth="true" hgrow="SOMETIMES" minWidth="10.0" />
+						<ColumnConstraints fillWidth="true" hgrow="SOMETIMES" minWidth="10.0" />
+						<ColumnConstraints fillWidth="true" hgrow="SOMETIMES" minWidth="10.0" />
+					</columnConstraints>
+					<rowConstraints>
+						<RowConstraints minHeight="50.0" prefHeight="30.0" vgrow="SOMETIMES" />
+					</rowConstraints>
+					<children>
+						<Hyperlink onAction="#visitOpenStreetMap" styleClass="routeInfos" text="Map data from OpenStreetMap" GridPane.columnIndex="0" GridPane.columnSpan="2" />
+						<Hyperlink onAction="#visitVVM" styleClass="routeInfos" text="Public Transport data from VVM" GridPane.columnIndex="2" GridPane.columnSpan="2" />
+						<Label fx:id="start" styleClass="routeInfos" GridPane.columnIndex="4" GridPane.columnSpan="2" />
+						<Label fx:id="arrow" styleClass="routeInfos" text="----&gt;" GridPane.columnIndex="6" />
+						<Label fx:id="destination" styleClass="routeInfos" GridPane.columnIndex="7" GridPane.columnSpan="2" />
+						<Button fx:id="saveButton" mnemonicParsing="false" onAction="#printRoute" styleClass="routeInfos" text="Button" GridPane.columnIndex="9" />
+					</children>
+				</GridPane>
+			</children>
+		</GridPane>
+		<Pane prefHeight="200.0" prefWidth="200.0" />
+	</children>
 </VBox>
