--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/route/availableRoutes/availableRoutes.fxml
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/route/availableRoutes/availableRoutes.fxml
@@ -2,19 +2,34 @@
 
 <?import java.net.*?>
 <?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox fx:id="journeyBoxContainer" id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
+<VBox id="background" fx:id="journeyBoxContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
 	spacing="20" styleClass="background" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
 	fx:controller="io.github.wuerzburgtransportguide.view.pages.route.availableRoutes.AvailableRoutesController"
 >
 	<padding>
 		<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
 	</padding>
-	<children>
-	</children>
 	<stylesheets>
 		<URL value="@../../../styles/global.css" />
 		<URL value="@availableRoutes.css" />
 	</stylesheets>
+	<children>
+		<GridPane>
+			<columnConstraints>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+			</rowConstraints>
+			<children>
+				<Label id="availableRoutes" text="Available routes" />
+				<ProgressIndicator fx:id="spinner" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+			</children>
+		</GridPane>
+
+	</children>
 </VBox>
