--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/map/map.css
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/map/map.css
@@ -1,21 +1,25 @@
 .routeInfos {
-	-fx-font-size: 11;
+	-fx-font-size: 12;
 }
 
 #arrow {
 	-fx-text-fill: white;
-	-fx-font-size: 14;
+	-fx-font-size: 12;
 }
 
 #saveButton {
+	-fx-control-inner-background: #4E5357;
 	-fx-background-color: #4E5357;
+	-fx-background-radius: 10;
 	-fx-text-fill: white;
 }
 
 #start {
-	-fx-text-fill: #4D80FFB3;
+	-fx-text-fill: white;
+	-fx-font-weight: bold;
 }
 
 #destination {
-	-fx-text-fill: #CC004DB3;
+	-fx-text-fill: white;
+	-fx-font-weight: bold;
 }
