Add back button

--- a/src/main/resources/io/github/wuerzburgtransportguide/pages/map/map.css
+++ b/src/main/resources/io/github/wuerzburgtransportguide/pages/map/map.css
@@ -7,7 +7,7 @@
 	-fx-font-size: 12;
 }
 
-#saveButton {
+.button {
 	-fx-control-inner-background: #4E5357;
 	-fx-background-color: #4E5357;
 	-fx-background-radius: 10;
